--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -3,16 +3,26 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>The Movie DB</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-content padding id="page-home">
+  <h3 class="title" padding>Estrenos</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-row *ngIf="discovers" responsive-sm>
+    <ion-col col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2 *ngFor="let discover of discovers.results">
+      <ion-card>
+        <img [src]="imageURL + discover.poster_path"/>
+        <ion-card-content>
+          <h2>
+            {{discover.title}}
+          </h2>
+          <!--<p>
+            {{discover.overview}}
+          </p>-->
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+  </ion-row>
 </ion-content>
