--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -10,19 +10,22 @@
 <ion-content padding id="page-home">
   <h3 class="title" padding>Estrenos</h3>
 
-  <ion-row *ngIf="discovers" responsive-sm>
-    <ion-col col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2 *ngFor="let discover of discovers.results">
+  <ion-row *ngIf="movies" responsive-sm>
+    <ion-col col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2 *ngFor="let movie of movies">
       <ion-card>
-        <img [src]="imageURL + discover.poster_path"/>
+        <img *ngIf="movie.poster_path" [src]="imageURL + movie.poster_path"/>
+        <div class="no-image" *ngIf="!movie.poster_path"></div>
         <ion-card-content>
           <h2>
-            {{discover.title}}
+            {{movie.title}}
           </h2>
-          <!--<p>
-            {{discover.overview}}
-          </p>-->
         </ion-card-content>
       </ion-card>
     </ion-col>
   </ion-row>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
