--- a/src/pages/search/search.page.html
+++ b/src/pages/search/search.page.html
@@ -1,19 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>The Movie DB</ion-title>
-    <ion-buttons end>
-     <button (click)="goSearchPage()" ion-button icon-only>
-       <ion-icon name="search"></ion-icon>
-     </button>
-   </ion-buttons>
-  </ion-navbar>
+  <ion-searchbar class="searchBar" [(ngModel)]="queryText" (search)="search($event)" placeholder="Buscar"></ion-searchbar>
 </ion-header>
 
 <ion-content padding id="page-home">
-  <h3 class="title" padding>Estrenos</h3>
+  <h3 class="title" *ngIf="movies" padding>Resultados</h3>
 
   <ion-row *ngIf="movies" responsive-sm>
     <ion-col col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2 *ngFor="let movie of movies">
